# my-books.purs

./: .babelrc  .buildpacks  .dockerignore  .gitignore  .gitmodules  Dockerfile  MyBooks.cabal  Procfile  README.md  bower.json  build-docker.cmd  gulpfile.babel.js  package.json  stack.yaml  webpack.config.babel.js
couchapps/: install-user.js  install.js  package.json  watcher.js
couchapps/books/: app.books.js
couchapps/users/: app.users.js
docker/BookIndexer/: Dockerfile
docker/CouchAuthProxy/: Dockerfile
docker/MyBooks/: Dockerfile
docker/couchdb/: Dockerfile  admin.ini.m4
docker/server/: docker.nix
js/: App.js  Index.js  Login.js  duktape-console-shim.js
server/: Main.hs  Onedrive.hs  ReactRender.hs  ServerEnvironmentInfo.hs  UserInfo.hs
server/BookIndexer/: .dir-locals.el  BookMetadataReader.hs  Environment.hs  IndexerState.hs  Main.hs
server/BookIndexer/CouchDB/: Requests.hs
server/BookIndexer/CouchDB/Changes/: Watcher.hs
server/BookIndexer/Onedrive/: AudioFacet.hs  DeletedFacet.hs  FileFacet.hs  FileSystemInfoFacet.hs  FolderChangesReader.hs  FolderFacet.hs  HashesType.hs  Identity.hs  IdentitySet.hs  ImageFacet.hs  ItemReference.hs  LocationFacet.hs  OnedriveItem.hs  PackageFacet.hs  PhotoFacet.hs  RemoteItemFacet.hs  SearchResultFacet.hs  SharedFacet.hs  SharepointIdsFacet.hs  SpecialFolderFacet.hs  Thumbnail.hs  ThumbnailSet.hs  VideoFacet.hs
server/BookIndexer/Types/: BookInfo.hs  Seq.hs
server/Common/: BooksDirectoryInfo.hs  Database.hs  JSONHelper.hs  Onedrive.hs  OnedriveInfo.hs  ServerEnvironmentInfo.hs  UserInfo.hs
server/CouchAuthProxy/: .dir-locals.el  Main.hs
server/Web/: .dir-locals.el  Main.hs  Onedrive.hs  ReactRender.hs  UserInfo.hs  ViewEpub.hs
server/my-books/: MyBooks.cabal  shell.nix
server/my-books/BookIndexer/: BookMetadataReader.hs  IndexerState.hs
server/my-books/Common/: BooksDirectoryInfo.hs  HTTPHelper.hs  Onedrive.hs  OnedriveInfo.hs  UserInfo.hs
server/my-books/CouchAuthProxy/: UserToken.hs
src/: Header.purs  Main.purs
src/Common/: AjaxHelper.purs  Json.purs  Monad.purs  OneDriveApi.purs  React.purs  Settings.purs
src/Common/Data/: BookInfo.purs  BooksDirectoryInfo.purs  OnedriveInfo.purs  ServerEnvironmentInfo.purs  UserInfo.purs
src/Components/: AjaxLoader.purs  BookThumbnails.purs  BooksDirectory.purs  ChooseDirectoryModal.purs  ChoosedDirectory.purs  Header.purs  OneDriveFileTree.purs
src/Components/AjaxLoader/: AjaxLoader.js  AjaxLoader.purs
src/Components/BookThumbnails/: Pager.purs  Thumbnail.purs
src/Components/Wrappers/: Alert.js  Alert.purs  Button.js  Button.purs  Checkbox.js  Checkbox.purs  Col.js  Col.purs  ControlLabel.js  ControlLabel.purs  Form.js  Form.purs  FormControl.js  FormControl.purs  FormGroup.js  FormGroup.purs  Glyphicon.js  Glyphicon.purs  Grid.js  Grid.purs  Modal.js  Modal.purs  Panel.js  Panel.purs  Router.js  Router.purs  Row.js  Row.purs  Thumbnail.js  Thumbnail.purs  TreeView.js  TreeView.purs
src/Entries/: App.purs  Index.purs  IndexProps.purs  Login.purs  Main.purs
src/Entries/App/: Class.purs
src/Entries/Index/: Class.purs  Server.purs
src/Entries/Login/: Class.purs  Server.purs
src/Libs/: PouchDB.js  PouchDB.purs
src/Libs/PouchDB/: Json.purs  QueryItem.purs
