name:                MyBooks
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable MyBooks
  main-is:             Web/Main.hs
  other-modules:       Common.Database,
                       Common.HTTPHelper,
                       Common.JSONHelper,
                       Common.Onedrive,
                       Common.OnedriveInfo,
                       Common.ServerEnvironmentInfo
  -- other-extensions:    
  build-depends:       base,
                       Spock,
                       wai-middleware-static,
                       blaze-html,
                       text,
                       http-conduit,
                       wai,
                       transformers,
                       http-types,
                       bytestring,
                       aeson,
                       conduit-extra,
                       exceptions,
                       conduit,
                       mtl,
                       attoparsec,
                       lens-aeson,
                       lens,
                       blaze-markup,
                       errors,
                       directory,
                       filepath,
                       optparse-applicative,
                       monad-control
  hs-source-dirs:      server
  default-language:    Haskell2010

executable BookIndexer
           main-is:             BookIndexer/Main.hs
           other-modules:       BookIndexer.CouchDB.Changes.Watcher,
                                BookIndexer.IndexerState,
                                Common.BooksDirectoryInfo,
                                Common.Database,
                                Common.HTTPHelper,
                                Common.JSONHelper,
                                Common.Onedrive,
                                Common.OnedriveInfo,
                                Common.ServerEnvironmentInfo,
                                Common.UserInfo
           build-depends:       aeson,
                                async,
                                attoparsec,
                                base,
                                blaze-builder,
                                bytestring,
                                conduit,
                                conduit-combinators,
                                conduit-extra,
                                exceptions,
                                hs-onedrive,
                                http-conduit,
                                http-types,
                                lens,
                                mtl,
                                stm,
                                text
           hs-source-dirs:      server
           default-language:    Haskell2010