name:                MyBooks
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable MyBooks
  main-is:             Web/Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Common.Database,
                       Common.HTTPHelper,
                       Common.Onedrive,
                       Common.OnedriveInfo,
                       Common.ServerEnvironmentInfo
  -- other-extensions:    
  build-depends:       aeson,
                       attoparsec,
                       base,
                       blaze-html,
                       blaze-markup,
                       bytestring,
                       conduit,
                       conduit-extra,
                       directory,
                       errors,
                       filepath,
                       http-conduit,
                       http-types,
                       hs-couchdb,
                       hs-onedrive,
                       exceptions,
                       lens,
                       lens-aeson,
                       monad-control,
                       mtl,
                       optparse-applicative,
                       Spock-core,
                       text,
                       transformers,
                       wai,
                       wai-middleware-static
  hs-source-dirs:      server
  default-language:    Haskell2010

executable BookIndexer
           main-is:             BookIndexer/Main.hs
           ghc-options:         -threaded -rtsopts -with-rtsopts=-N
           other-modules:       BookIndexer.BookMetadataReader,
                                BookIndexer.IndexerState,
                                BookIndexer.Types.BookInfo,
                                Common.BooksDirectoryInfo,
                                Common.Database,
                                Common.HTTPHelper,
                                Common.JSONHelper,
                                Common.Onedrive,
                                Common.OnedriveInfo,
                                Common.ServerEnvironmentInfo,
                                Common.UserInfo
           build-depends:       aeson,
                                async,
                                attoparsec,
                                base,
                                blaze-builder,
                                bytestring,
                                conduit,
                                conduit-combinators,
                                conduit-extra,
                                containers,
                                epub-metadata,
                                errors,
                                exceptions,
                                hs-couchdb,
                                hs-onedrive,
                                http-client,
                                http-conduit,
                                http-types,
                                lens,
                                mtl,
                                stm,
                                text,
                                transformers
           hs-source-dirs:      server
           default-language:    Haskell2010

executable CouchAuthProxy
           main-is:             CouchAuthProxy/Main.hs
           other-modules:       CouchAuthProxy.UserToken
           ghc-options:         -threaded -rtsopts -with-rtsopts=-N
           build-depends:       aeson,
                                base,
                                bytestring,
                                case-insensitive,
                                exceptions,
                                hs-couchdb,
                                hs-onedrive,
                                http-conduit,
                                http-types,
                                lens,
                                Spock-core,
                                text,
                                transformers,
                                wai
           hs-source-dirs:      server
           default-language:    Haskell2010
